# Investment

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: signals.yaml  symbols.yaml  trading.yaml
data/samples/: okx_response_sample.json
docs/: AGENT_HANDOFF.md  ARCHITECTURE.md  CHANGELOG.md  DUAL_MA_STRATEGY.md  EXTERNAL_APIS.md  PINE_SCRIPT_MAPPING.md  PROGRESS.md  STAGES.md
scripts/: backtest.py  backtest_dual_ma_1y.py  backtest_dual_ma_compare.py  compute_once.py  daily_report.py  dashboard.py  fetch_history.py  paper_trade.py  run_forever.py  run_once.py  send_test_message.py
src/investment/: __init__.py  config.py  logger.py
src/investment/data/: __init__.py  kline_store.py  okx_client.py
src/investment/indicators/: __init__.py  dot_locator.py  moving_average.py
src/investment/notifier/: __init__.py  dedup.py  feishu.py
src/investment/runner/: __init__.py  backtest.py  pipeline.py  scheduler.py
src/investment/signals/: __init__.py  base.py  loader.py
src/investment/signals/examples/: __init__.py  dot_pullback.py  golden_cross.py  ma20_pullback.py  ma_cluster_breakout.py
src/investment/trader/: __init__.py  executor.py  exit_strategies.py  order.py  paper_account.py
tests/: test_backtest.py  test_dedup.py  test_executor.py  test_exit_strategies.py  test_feishu_notifier.py  test_indicators.py  test_okx_client.py  test_paper_account.py  test_pipeline.py  test_signals.py  test_signals_dual_ma.py
