[project]
name = "investment"
version = "0.1.0"
description = "加密货币均线盯盘 + 飞书提醒系统（OKX 数据源 / 复刻 TradingView 均线指标）"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "HuangHanCheng" }]

dependencies = [
    # 数据
    "requests>=2.31",
    "pandas>=2.2",
    "pyarrow>=15.0",          # parquet IO
    # 配置
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    # 调度
    "apscheduler>=3.10",
    # 通知
    "lark-oapi>=1.2",
    # 日志
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/investment"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 110
target-version = "py310"
